@@ -1,13 +1,81 @@
-# *Mastermind*
-### Project about the well-known game Mastermind  
-### This project has been done following the three layer design. 
-### To execute the program, go to the directory /FONTS/ and type in the terminal *"make executable"* to re-compile all the files or *"make executar"* to execute the *.jar* that contains the program.
-#### All additional information on how to play, how the project is organized, the objects that make it, UML conceptual diagram, use case diagram and extras are located in */DOCS/*.  
-#### The code, its tests and driver is located in */FONTS/*.  
-#### The data is stored in */EXE/*. 
+# 🎯 Mastermind
 
-Authors:  
-➔ JORDI BARANDA DOMINGUEZ  
-➔ JUAN CLUSELLAS CÁNOVA  
-➔ FERRAN SOLANES SERRAT  
-➔ MARC TURU ROCA  
+<sub>🗓️ Developed in June 2023</sup>
+
+This project is an implementation of the **well-known game Mastermind**, developed following the **three-layer architecture** design pattern (**Presentation**, **Domain**, and **Persistence** layers).
+
+---
+
+## ✅ Features
+
+- **Domain logic** with algorithms to solve the game.
+- **Persistence layer** for storing data.
+- **Presentation layer** for interacting with the user.
+- **Comprehensive documentation** with UML diagrams, use cases, and test plans.
+
+---
+
+## 🛠 Installation & Setup
+
+To compile or execute the program, navigate to `/FONTS/` and use the provided **Makefile** commands:
+
+```bash
+# Recompile all Java files
+make executable
+
+# Run the program from the precompiled JAR
+make executar
+```
+
+The program uses the `--add-opens java.base/java.time=ALL-UNNAMED` flag for Java module access.
+
+---
+
+## 🧪 Running Tests
+
+JUnit test cases are provided for all major classes.
+
+```bash
+# Run all tests
+make allTest
+
+# Run a specific test
+make TestRecord
+make TestRecordInteger
+make TestRecordDouble
+make TestRecordLong
+make TestRanking
+make TestPartida
+make TestRonda
+make TestSequencia
+make TestUser
+make TestUser_maquina
+make TestUser_persona
+```
+
+You can also run **driver_algorisme** to test algorithm-specific code:
+
+```bash
+make driver_algorisme
+```
+
+---
+
+## 📊 Documentation
+
+### Technical Documentation
+Inside `/DOCS/`, you will find:
+- UML **class diagrams**.
+- **Use case diagrams**.
+- **Layer architecture diagrams**.
+- Descriptions of **data structures and algorithms**.
+- **User manual**.
+
+---
+
+## 👥 Authors
+
+- Jordi Baranda Dominguez  
+- Juan Clusellas Cánova  
+- Ferran Solanes Serrat  
+- Marc Turu Roca  
